<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ADF TAR</string>
    <string name="titre">ADF TAR</string>
    <string name="sous_titre">Touchez une application pour l\'ouvrir</string>
    <string name="aucune_app">Aucune application configurée</string>
    <string name="app_non_installee">%1$s n\'est pas installée sur cette tablette</string>
    <string name="logo_description">Groupe ADF – rechercher une mise à jour</string>
    <string name="version">Version %1$s</string>

    <string name="maj_titre">Mise à jour</string>
    <string name="maj_recherche">Recherche d\'une mise à jour…</string>
    <string name="maj_telechargement">Téléchargement de la version %1$d… %2$d %%</string>
    <string name="maj_aucune">Pas de mise à jour nécessaire, vous disposez de la dernière version.</string>
    <string name="maj_erreur">Impossible de vérifier la mise à jour. Vérifiez la connexion internet.</string>
    <string name="maj_autorisation">Autorisez « Installer des applications inconnues » pour ADF TAR, puis revenez et recommencez.</string>
    <string name="installation_titre">Installation de %1$s</string>
    <string name="installation_progression">Téléchargement de %1$s… %2$d %%</string>
    <string name="installation_erreur">Impossible de télécharger l\'application. Vérifiez la connexion internet.</string>
    <string name="maj_installee">Application mise à jour (version %1$s).</string>

    <string name="beta_titre">Versions bêta (test)</string>
    <string name="beta_nom">%1$s BÊTA</string>
    <string name="beta_mot_de_passe">Mot de passe des versions bêta</string>
    <string name="beta_mauvais_mot_de_passe">Mot de passe incorrect</string>
    <string name="beta_activees">Versions bêta affichées</string>
    <string name="beta_masquer">Masquer les versions bêta ?</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="masquer">Masquer</string>

    <string name="maj_choix_titre">Mises à jour</string>
    <string name="maj_statut_disponible">Nouvelle version disponible</string>
    <string name="maj_statut_a_jour">À jour</string>
    <string name="maj_valider">Mettre à jour</string>
</resources>
